--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -57,14 +57,14 @@
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <0xf00>;
-			clock-frequency = <800000000>;
+			clocks = <&syscon ASPEED_CLK_HPLL>;
 		};
 
 		CPU1: cpu@1 {
 			compatible = "arm,cortex-a7";
 			device_type = "cpu";
 			reg = <0xf01>;
-			clock-frequency = <800000000>;
+			clocks = <&syscon ASPEED_CLK_HPLL>;
 		};
 
 	};
@@ -433,7 +433,8 @@
 				reg = <0x1e6e6000 0x1000>;
 				reg-io-width = <4>;
 				clocks = <&syscon ASPEED_CLK_GATE_D1CLK>;
-				resets = <&syscon ASPEED_RESET_CRT>;
+				resets = <&syscon ASPEED_RESET_CRT>, <&syscon ASPEED_RESET_GRAPHICS>;
+                reset-names = "crt", "engine";
 				interrupts = <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>;
 				memory-region = <&gfx_memory>;
                         };
