--- a/arch/arm/boot/dts/aspeed-ast2600-fpga.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600-fpga.dts
@@ -75,30 +75,9 @@
 
 	};
 
-	ssp: secondary-service-processor {
-		compatible = "aspeed,ast2600-ssp";
-		#address-cells = <2>;
-		#size-cells = <0>;
-
+	&ssp {
 		memory-region = <&ssp_memory>;
-		aspeed,cvic = <&cvic>;
-		interrupts = 	<GIC_SPI 182 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 183 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 184 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 185 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 186 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 187 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 188 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 189 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 190 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 191 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 192 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 193 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 194 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 195 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 196 IRQ_TYPE_LEVEL_HIGH>,
-				<GIC_SPI 197 IRQ_TYPE_LEVEL_HIGH>;
-	};
+	}
 
     	iio-hwmon {
             	compatible = "iio-hwmon";
