--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -122,9 +122,9 @@
 			reg = <0x10000000 0x10000>;      // 64K
 		};
 
-		ssp_cache: sram@1a000000 {
+		ssp_tcm: sram@1a000000 {
 			compatible = "mmio-sram";
-			reg = <0x1a000000 0x40000>;
+			reg = <0x1a000000 0x2000>;
 		};
 
 		ssp: secondary-service-processor {
