--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -682,7 +682,7 @@
 				#gpio-cells = <2>;
 				gpio-controller;
 				compatible = "aspeed,ast2600-gpio";
-				reg = <0x1e780000 0x800>;
+				reg = <0x1e780000 0x400>;
 				interrupts = <GIC_SPI 40 IRQ_TYPE_LEVEL_HIGH>;
 				gpio-ranges = <&pinctrl 0 0 208>;
 				ngpios = <208>;
@@ -1339,6 +1339,13 @@
 				#address-cells = <1>;
 				#size-cells = <1>;
 				ranges = <0 0x1e7a0000 0x8000>;
+			};
+
+			host2bmc:host2bmc@1e7e0000 {
+				compatible = "aspeed,ast2600-host2bmc";
+				reg = <0x1e7e0000 0x4000>;
+				interrupts = <GIC_SPI 99 IRQ_TYPE_LEVEL_HIGH>;
+				status = "disabled";
 			};
 
 		};
