--- a/arch/arm/boot/dts/aspeed-ast2600a1-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600a1-evb.dts
@@ -218,8 +218,8 @@
 &i3c0 {
 	status = "okay";
 	/* IDT IMX3112 thermal sensor */
-	thermal_sensor: sensor@70,b380000000 {
-		reg = <0x70 0xb380 0x000000>;
+	thermal_sensor: sensor@70,3C000000000 {
+		reg = <0x70 0x3C0 0x00000000>;
 		assigned-address = <0x70>;
 	};
 };
