--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -690,11 +690,20 @@
 			rvas: rvas@1e7c8000 {
 				compatible = "aspeed,ast2600-rvas";
 				reg = <0x1e7c8000 0x800 0x1e6ec000 0x800 0x1e7c0000 0x2000>;
+#if 0
 				clocks = <&syscon ASPEED_CLK_GATE_VCLK>,
 					 <&syscon ASPEED_CLK_GATE_ECLK>;
 				clock-names = "vclk", "eclk";
+#else
+				clocks = <&syscon ASPEED_CLK_GATE_RVASCLK>;
+				clock-names = "rvasclk-gate";
+#endif
 				interrupts = <GIC_SPI 98 IRQ_TYPE_LEVEL_HIGH>;
+#if 0
 				resets = <&syscon ASPEED_RESET_VIDEO>;
+#else
+				resets = <&syscon ASPEED_RESET_RVAS>;
+#endif
 				status = "disabled";
 			};
 
