--- a/arch/arm/boot/dts/aspeed-ast2600a1-evb.dts
+++ b/arch/arm/boot/dts/aspeed-ast2600a1-evb.dts
@@ -477,11 +477,6 @@
 };
 #endif
 
-&sdc {
-	status = "okay";
-	timing-phase = <0xc6ffff>;
-};
-
 &emmc_controller {
 	status = "okay";
 	timing-phase = <0x700FF>;
@@ -492,16 +487,19 @@
 
 	non-removable;
 	max-frequency = <100000000>;
+	sdhci-drive-type = /bits/ 8 <3>;
 #if 1
 	bus-width = <4>;
 #else
 	bus-width = <8>;
 	pinctrl-0 = <&pinctrl_emmc_default 
-			&pinctrl_emmcdat4_default 
-			&pinctrl_emmcdat5_default
-			&pinctrl_emmcdat6_default
-			&pinctrl_emmcdat7_default>;
+			&pinctrl_emmcg8_default>;
 #endif
+};
+
+&sdc {
+	status = "okay";
+	timing-phase = <0xc6ffff>;
 };
 
 &sdhci0 {
@@ -509,9 +507,9 @@
 
 	bus-width = <4>;
 	max-frequency = <100000000>;
-
+	sdhci-drive-type = /bits/ 8 <3>;
 	/* SDR104/DDR50/SDR50 bits in CAPA2 is not supported */
-	sdhci-caps-mask = <0x7 0x0>;
+	sdhci-caps-mask = <0x7 0x580000>;
 	sdhci,wp-inverted;
 };
 
@@ -520,7 +518,8 @@
 
 	bus-width = <4>;
 	max-frequency = <100000000>;
-	sdhci-caps-mask = <0x7 0x0>;
+	sdhci-drive-type = /bits/ 8 <3>;
+	sdhci-caps-mask = <0x7 0x580000>;
 	sdhci,wp-inverted;
 };
 
